fixed user profile navbar search box shift

--- a/Scanorders2/src/Oleg/UserdirectoryBundle/Resources/public/form/css/typeahead.css
+++ b/Scanorders2/src/Oleg/UserdirectoryBundle/Resources/public/form/css/typeahead.css
@@ -81,7 +81,7 @@
 
 /* example specific styles */
 /* ----------------------- */
-#multiple-datasets-typeahead-search .search-name {
+#multiple-datasets-typeahead-search .search-name, #navbar-multiple-datasets-typeahead-search .search-name {
     color: #428bca;
     font-weight: bold;
     //width: 550px;
@@ -89,3 +89,4 @@
     padding: 3px 0;
     border-bottom: 1px solid #ccc;
 }
+
